<resources>
    <string name="app_name">Playstream</string>

    <!-- Errors and info messages, translatable-->
    <string name="login_failed">Login procedure failed, please retry.</string>
    <string name="error_no_stream_info_provided">No stream info provided.</string>
    <string name="system_user">System</string>

    <!-- Menus, translatable-->
    <string name="login">Login</string>
    <string name="settings">Settings</string>

    <string name="favourites">Follows</string>
    <string name="top_streams">Top streams</string>

    <!-- Title, translatable-->
    <string name="logged_in">Logged as: </string>
    <string name="not_logged_in">You are not logged in</string>

    <!-- Preferences-->

    <string name="defaults_category_title">Defaults</string>
    <string name="defaults_category_key" translatable="false">defaults_category</string>

    <string name="default_quality_summary">Stream playback quality</string>
    <string name="default_quality_title">Quality</string>
    <string name="default_quality_default_value">720x30</string>
    <string name="default_quality_key" translatable="false">default_quality</string>

    <string name="default_stream_list_mode_summary">Main screen mode</string>
    <string name="default_stream_list_mode_title">Navigation mode</string>
    <string name="default_stream_list_mode_default_value">0</string>
    <string name="default_stream_list_mode_key" translatable="false">default_stream_list_mode</string>

    <string name="stream_list_item_size_summary">Size of stream preview on main screen</string>
    <string name="stream_list_item_size_title">Preview size</string>
    <string name="stream_list_item_size_default_value">1</string>
    <string name="stream_list_item_size_key" translatable="false">preview_size</string>

    <string name="notifications_category_title">Notifications</string>
    <string name="notifications_category_key" translatable="false">notifications_category</string>

    <string name="notifications_are_on_title">Enable</string>
    <string name="notifications_are_on_summary">Enable notifications about channels becoming live.</string>
    <string name="notifications_are_on_key" translatable="false">notifications_are_on</string>

    <string name="silent_hours_title">Silent hours</string>
    <string name="silent_hours_summary">Enable silent hours, when notifications will be disabled.</string>
    <string name="silent_hours_key" translatable="false">silent_hours_are_on</string>

    <string name="silent_time_start_title">Start</string>
    <string name="silent_time_start_summary">Starting time for silent hours</string>
    <string name="silent_time_start_default_value">00:00</string>
    <string name="silent_time_start_key" translatable="false">silent_time_start</string>

    <string name="silent_time_finish_title">Finish</string>
    <string name="silent_time_finish_summary">Ending time for silent hours</string>
    <string name="silent_time_finish_default_value">00:00</string>
    <string name="silent_time_finish_key" translatable="false">silent_time_finish</string>

    <!-- Notifications-->
    <string name="notification_stream_viewers">%s viewers</string>
    <string name="notification_streams_live">%d streams are live</string>

    <string name="notification_new_streams_title">%d new stream online</string>

    <!-- Utilities-->
    <string name="live_streamer_notification_id" translatable="false">112121</string>>

    <!-- User screen-->
    <string name="user_follows_label">Follows: %d</string>
    <string name="user_views_label">Views: %d</string>

    <string name="user_panels_tab_title">Additional info</string>
    <string name="user_vods_tab_title">Recorded videos</string>

    <string name="user_no_info_stub">This user is a mysterious stranger.</string>
    <string name="user_no_panels_stub">No additional info )_(</string>


    <!-- Fonts-->
    <string name="font_sans_light">sans-serif-light</string>

    <string name="lorem">
		Lorem ipsum dolor sit amet, consectetur adipiscing elit.
		In mollis est vitae erat laoreet consectetur. Mauris dui mauris,
		dictum vel egestas vel, porta sed ante. Phasellus congue viverra ipsum,
		in elementum arcu ultricies nec.Morbi tincidunt nisl lacinia, placerat nisi eget, luctus tortor.
		Morbi efficitur dictum leo, sit amet volutpat lorem sodales nec. Quisque et erat et turpis fringilla condimentum.
		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris auctor vulputate libero vitae iaculis.
		Curabitur id blandit quam. Praesent massa ante, pulvinar vitae sagittis commodo, scelerisque porttitor eros.
		Mauris suscipit a enim nec congue. Mauris tristique cursus aliquet. Nunc quis hendrerit nunc. Praesent tristique tellus purus,
		a pretium ex gravida id. Cras laoreet malesuada nulla, at bibendum metus ultricies a. Fusce eu ornare arcu. Proin ut molestie est.
		Vestibulum quis vehicula erat. Nam sed tempus nibh. Sed tortor ante, maximus venenatis odio sed, ultricies maximus lectus.
		Aliquam sed volutpat ligula. Integer bibendum, magna ac lacinia suscipit,
		risus libero rutrum justo, sed tempus augue tellus eget est. Curabitur convallis augue nisl,
		id efficitur urna posuere faucibus. Ut sed egestas nulla, eu finibus metus. Nunc a arcu ante.
		Aenean ullamcorper dolor non condimentum congue. Aenean mauris nunc, pellentesque at placerat vitae,
		aliquet quis orci. Curabitur maximus augue ut bibendum sagittis.
	</string>

</resources>
